--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.9",
+    "motion": "^12.23.11",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.9",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
