--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.11",
+    "motion": "^12.23.12",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-github-calendar": "^4.5.9",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.178.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
